Fix comment upvote icon alignment

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -90,7 +90,7 @@ body {
                         margin-right: $space_inComment;
 
                         &>* {
-                            padding: 0.25rem 0.5rem;
+                            padding: 0.5rem;
                             background-color: $neut_veryLiGray;
                         }
 
